update name app

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="header">
         <div class="about">
-            <h2 class="app">TODO APP</h2>
+            <h2 class="app">TODO-APP</h2>
             <p class="quotes">Make your dream come true</p>
             <p class="quotes">with todo list</p>
             
